# krabnet

./: .gitignore  CODE_AUDIT.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESUME.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/01-core-types-and-string-interning/: 01-01-PLAN.md  01-01-SUMMARY.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-epoch-sequencer-and-ring-buffer/: 02-01-PLAN.md
.planning/phases/03-property-graph-storage/: 03-01-SUMMARY.md
.planning/phases/05-frame-materialization/: 05-01-SUMMARY.md
.planning/phases/06-signal-routing/: 06-01-SUMMARY.md
.planning/phases/10-benchmarks-and-quality/: 10-01-SUMMARY.md
.planning/phases/11-harden-engine/: 11-01-PLAN.md  11-02-PLAN.md  11-03-PLAN.md
.planning/phases/12-production-interface/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: krabnet_bench.rs
frontend/: docs.html  index.html  site.webmanifest  styles.css
proto/: krabnet.proto
src/: buffer_pool.rs  coalescer.rs  compaction.rs  count_min_sketch.rs  diff.rs  embryonic.rs  engine.rs  fanout.rs  frame.rs  graph.rs  grpc.rs  interner.rs  interpret.rs  lib.rs  mcp.rs  path_extender.rs  ring_buffer.rs  routing.rs  sequencer.rs  set_trie.rs  tier3.rs  tiering.rs  trunk.rs  types.rs  wal.rs
(+68 files in other folders)
