[package]
name = "krabnet"
version = "0.1.0"
edition = "2021"
description = "Streaming graph runtime with differential MVCC and pre-materialized traversals"

[dependencies]
crossbeam = { version = "0.8", default-features = false, features = ["std"] }
bitvec = "1.0"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "krabnet_bench"
harness = false
