[package]
name = "krabnet"
version = "0.1.0"
edition = "2021"
description = "Streaming graph runtime with differential MVCC and pre-materialized traversals"

[dependencies]
crossbeam = { version = "0.8", default-features = false, features = ["std"] }
bitvec = "1.0"
tokio = { version = "=1.38.1", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
async-stream = "0.3"
ureq = { version = "2", default-features = false, features = ["json", "native-tls", "gzip"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
tempfile = "=3.10.1"
protox = "0.7"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bin]]
name = "krabnet-server"
path = "src/bin/krabnet-server.rs"

[[bin]]
name = "krabnet-mcp"
path = "src/bin/krabnet-mcp.rs"

[[bench]]
name = "krabnet_bench"
harness = false
